[tool.poetry]
name = "timecontroller"
version = "3.11.1"
description = "Проект контроля времени доставки через удобные и простые интерфейсы"
authors = ["Garik <khvatik.igor@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.6.0"
aiogram = "^3.13.1"
loguru = "^0.7.2"
apscheduler = "^3.11.0"
pytz = "^2024.2"
sqlalchemy = "^2.0.36"
aiosqlite = "^0.20.0"
alembic = "^1.14.0"
asyncpg = "^0.30.0"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
iiko-api = { git = "https://github.com/KhvatikG/iiko-api.git" }
plotly = "5.24.1"
psycopg2-binary = "^2.9.10"
imageio = "^2.37.0"
kaleido = {version = "0.2.1", platform = "linux"}  # Для Docker

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
